multi-version source via preprocessor working for 1.20.4 and 1.20.6